implemented AI answers